--- a/PitchPerfect/Base.lproj/Main.storyboard
+++ b/PitchPerfect/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="1wY-Aj-Wce">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
@@ -8,51 +8,58 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Record Sounds View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="PitchPerfect" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="RecordSoundsViewController" customModule="PitchPerfect" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cfJ-JV-IIQ">
-                                <rect key="frame" x="157.33333333333334" y="409" width="78.333333333333343" height="34.333333333333314"/>
-                                <color key="backgroundColor" systemColor="systemGreenColor"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="Record"/>
-                                <connections>
-                                    <action selector="recordAudio:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ucc-Wy-nvV"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pQA-ml-Imp">
-                                <rect key="frame" x="125.00000000000001" y="486.66666666666669" width="141.33333333333337" height="35.000000000000057"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="Stop Recording"/>
-                                <connections>
-                                    <action selector="stopRecording:" destination="BYZ-38-t0r" eventType="touchUpInside" id="O9s-Jh-Mph"/>
-                                </connections>
-                            </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Tap to Record" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4G4-fD-St9">
-                                <rect key="frame" x="143" y="458" width="105.66666666666666" height="20"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tap to Record" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4G4-fD-St9">
+                                <rect key="frame" x="143.66666666666666" y="509.66666666666674" width="105.66666666666666" height="20"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="fill" contentVerticalAlignment="fill" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pQA-ml-Imp">
+                                <rect key="frame" x="164.66666666666666" y="536.33333333333337" width="64" height="64"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="64" id="3zy-K9-8OV"/>
+                                    <constraint firstAttribute="width" constant="64" id="Eey-s6-YC4"/>
+                                </constraints>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" image="Stop"/>
+                                <connections>
+                                    <action selector="stopRecording:" destination="BYZ-38-t0r" eventType="touchUpInside" id="O9s-Jh-Mph"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cfJ-JV-IIQ">
+                                <rect key="frame" x="119" y="348.66666666666669" width="155" height="155"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" image="RecordButton"/>
+                                <connections>
+                                    <action selector="recordAudio:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ucc-Wy-nvV"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="pQA-ml-Imp" firstAttribute="centerX" secondItem="4G4-fD-St9" secondAttribute="centerX" id="BH9-Ip-NMM"/>
-                            <constraint firstItem="4G4-fD-St9" firstAttribute="top" secondItem="cfJ-JV-IIQ" secondAttribute="bottom" constant="8" symbolic="YES" id="GM5-hS-Myv"/>
-                            <constraint firstItem="cfJ-JV-IIQ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Mmg-9E-i0o"/>
-                            <constraint firstItem="pQA-ml-Imp" firstAttribute="top" secondItem="4G4-fD-St9" secondAttribute="bottom" constant="8" symbolic="YES" id="bnG-yC-EAb"/>
-                            <constraint firstItem="4G4-fD-St9" firstAttribute="centerX" secondItem="cfJ-JV-IIQ" secondAttribute="centerX" id="sSE-dB-ECq"/>
-                            <constraint firstItem="cfJ-JV-IIQ" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="twp-XP-263"/>
+                            <constraint firstItem="4G4-fD-St9" firstAttribute="firstBaseline" secondItem="cfJ-JV-IIQ" secondAttribute="baseline" constant="22.333333333333332" symbolType="layoutAnchor" id="0tn-Gd-A6r"/>
+                            <constraint firstItem="4G4-fD-St9" firstAttribute="centerX" secondItem="cfJ-JV-IIQ" secondAttribute="centerX" id="P9l-8Z-Dfe"/>
+                            <constraint firstItem="cfJ-JV-IIQ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Vy0-OT-fQD"/>
+                            <constraint firstItem="pQA-ml-Imp" firstAttribute="firstBaseline" secondItem="4G4-fD-St9" secondAttribute="baseline" constant="21.333333333333332" symbolType="layoutAnchor" id="dhL-v1-prr"/>
+                            <constraint firstItem="pQA-ml-Imp" firstAttribute="centerX" secondItem="4G4-fD-St9" secondAttribute="centerX" id="uek-uP-Wkg"/>
+                            <constraint firstItem="cfJ-JV-IIQ" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="zPU-oy-nUT"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="ZGS-dK-CyO"/>
                     <connections>
+                        <outlet property="recordButton" destination="cfJ-JV-IIQ" id="T3Z-aA-8N6"/>
                         <outlet property="recordingLabel" destination="4G4-fD-St9" id="qRs-Ly-Z2A"/>
+                        <outlet property="stopRecordingButton" destination="pQA-ml-Imp" id="MtQ-xg-UTt"/>
+                        <segue destination="oZk-xj-ehf" kind="show" identifier="stopRecording" id="xDB-qd-Sd5"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -63,15 +70,51 @@
                     <buttonConfiguration key="configuration" style="plain" title="Button"/>
                 </button>
             </objects>
+            <point key="canvasLocation" x="978" y="4"/>
+        </scene>
+        <!--Play Sounds View Controller-->
+        <scene sceneID="4c2-Mg-NQy">
+            <objects>
+                <viewController id="oZk-xj-ehf" customClass="PlaySoundsViewController" customModule="PitchPerfect" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="sGG-l7-4Ri">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="YSk-Vo-kH1"/>
+                        <color key="backgroundColor" systemColor="linkColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="FuA-9Z-DSF"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Uai-Mc-0nm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1847" y="4"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="abw-s6-S79">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="1wY-Aj-Wce" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="S1c-M4-Kqo">
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="pVh-9s-0et"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="j8g-j2-bYu" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
             <point key="canvasLocation" x="135.1145038167939" y="3.5211267605633805"/>
         </scene>
     </scenes>
     <resources>
+        <image name="RecordButton" width="155" height="155"/>
+        <image name="Stop" width="155" height="155"/>
+        <systemColor name="linkColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemGreenColor">
-            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
