--- a/PitchPerfect/Base.lproj/Main.storyboard
+++ b/PitchPerfect/Base.lproj/Main.storyboard
@@ -17,12 +17,12 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tap to Record" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4G4-fD-St9">
-                                <rect key="frame" x="143.66666666666666" y="509.66666666666674" width="105.66666666666666" height="20"/>
+                                <rect key="frame" x="143.66666666666666" y="509.66666666666674" width="106" height="20"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="fill" contentVerticalAlignment="fill" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pQA-ml-Imp">
+                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="fill" contentVerticalAlignment="fill" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pQA-ml-Imp">
                                 <rect key="frame" x="164.66666666666666" y="536.33333333333337" width="64" height="64"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="64" id="3zy-K9-8OV"/>
@@ -34,7 +34,7 @@
                                     <action selector="stopRecording:" destination="BYZ-38-t0r" eventType="touchUpInside" id="O9s-Jh-Mph"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cfJ-JV-IIQ">
+                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cfJ-JV-IIQ">
                                 <rect key="frame" x="119" y="348.66666666666669" width="155" height="155"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                 <state key="normal" image="RecordButton"/>
@@ -46,10 +46,10 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="4G4-fD-St9" firstAttribute="firstBaseline" secondItem="cfJ-JV-IIQ" secondAttribute="baseline" constant="22.333333333333332" symbolType="layoutAnchor" id="0tn-Gd-A6r"/>
+                            <constraint firstItem="4G4-fD-St9" firstAttribute="firstBaseline" secondItem="cfJ-JV-IIQ" secondAttribute="baseline" constant="22.5" symbolType="layoutAnchor" id="0tn-Gd-A6r"/>
                             <constraint firstItem="4G4-fD-St9" firstAttribute="centerX" secondItem="cfJ-JV-IIQ" secondAttribute="centerX" id="P9l-8Z-Dfe"/>
                             <constraint firstItem="cfJ-JV-IIQ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Vy0-OT-fQD"/>
-                            <constraint firstItem="pQA-ml-Imp" firstAttribute="firstBaseline" secondItem="4G4-fD-St9" secondAttribute="baseline" constant="21.333333333333332" symbolType="layoutAnchor" id="dhL-v1-prr"/>
+                            <constraint firstItem="pQA-ml-Imp" firstAttribute="firstBaseline" secondItem="4G4-fD-St9" secondAttribute="baseline" constant="10.5" symbolType="layoutAnchor" id="dhL-v1-prr"/>
                             <constraint firstItem="pQA-ml-Imp" firstAttribute="centerX" secondItem="4G4-fD-St9" secondAttribute="centerX" id="uek-uP-Wkg"/>
                             <constraint firstItem="cfJ-JV-IIQ" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="zPU-oy-nUT"/>
                         </constraints>
@@ -79,10 +79,109 @@
                     <view key="view" contentMode="scaleToFill" id="sGG-l7-4Ri">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="y4d-cC-vi2">
+                                <rect key="frame" x="0.0" y="103" width="393" height="715"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="Lwg-ww-ge4">
+                                        <rect key="frame" x="0.0" y="0.0" width="393" height="238.33333333333334"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="B66-It-ucV" userLabel="Slow Button">
+                                                <rect key="frame" x="0.0" y="0.0" width="196.66666666666666" height="238.33333333333334"/>
+                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                                <state key="normal" image="Slow"/>
+                                                <connections>
+                                                    <action selector="playSoundForButton:" destination="oZk-xj-ehf" eventType="touchUpInside" id="fmK-we-8Gc"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" tag="1" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FNi-EI-yiI" userLabel="Fast Button">
+                                                <rect key="frame" x="196.66666666666663" y="0.0" width="196.33333333333337" height="238.33333333333334"/>
+                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                                <state key="normal" image="Fast"/>
+                                                <connections>
+                                                    <action selector="playSoundForButton:" destination="oZk-xj-ehf" eventType="touchUpInside" id="1zT-wV-b5u"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="JVL-11-3Ta">
+                                        <rect key="frame" x="0.0" y="238.33333333333331" width="393" height="238.33333333333331"/>
+                                        <subviews>
+                                            <button opaque="NO" tag="2" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YtV-1o-K2j" userLabel="HighPitch Button">
+                                                <rect key="frame" x="0.0" y="0.0" width="196.66666666666666" height="238.33333333333334"/>
+                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                                <state key="normal" image="HighPitch"/>
+                                                <connections>
+                                                    <action selector="playSoundForButton:" destination="oZk-xj-ehf" eventType="touchUpInside" id="2uJ-RJ-pNY"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" tag="3" contentMode="scaleAspectFit" horizontalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jqc-NT-0rO" userLabel="LowPitch Button">
+                                                <rect key="frame" x="196.66666666666663" y="0.0" width="196.33333333333337" height="238.33333333333334"/>
+                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                                <state key="normal" image="LowPitch"/>
+                                                <connections>
+                                                    <action selector="playSoundForButton:" destination="oZk-xj-ehf" eventType="touchUpInside" id="kip-sI-Izg"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="Ztw-em-PBg">
+                                        <rect key="frame" x="0.0" y="476.66666666666657" width="393" height="238.33333333333331"/>
+                                        <subviews>
+                                            <button opaque="NO" tag="4" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LUN-ha-xYn" userLabel="Echo Button">
+                                                <rect key="frame" x="0.0" y="0.0" width="196.66666666666666" height="238.33333333333334"/>
+                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                                <state key="normal" image="Echo"/>
+                                                <connections>
+                                                    <action selector="playSoundForButton:" destination="oZk-xj-ehf" eventType="touchUpInside" id="oEy-KI-T7I"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" tag="5" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uQy-KT-PuO" userLabel="Reverb Button">
+                                                <rect key="frame" x="196.66666666666663" y="0.0" width="196.33333333333337" height="238.33333333333334"/>
+                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                                <state key="normal" image="Reverb"/>
+                                                <connections>
+                                                    <action selector="playSoundForButton:" destination="oZk-xj-ehf" eventType="touchUpInside" id="Hph-yn-eJL"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
+                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="m5f-lG-sFK" userLabel="Stop Button">
+                                <rect key="frame" x="164.66666666666666" y="754" width="64" height="64"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="64" id="BeM-St-CKG"/>
+                                    <constraint firstAttribute="height" constant="64" id="QD3-Pp-fHs"/>
+                                </constraints>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" image="Stop"/>
+                                <connections>
+                                    <action selector="stopButtonPressed:" destination="oZk-xj-ehf" eventType="touchUpInside" id="G8U-PM-Qdd"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="YSk-Vo-kH1"/>
-                        <color key="backgroundColor" systemColor="linkColor"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="m5f-lG-sFK" firstAttribute="bottom" secondItem="y4d-cC-vi2" secondAttribute="bottom" id="661-1N-kyp"/>
+                            <constraint firstItem="y4d-cC-vi2" firstAttribute="top" secondItem="YSk-Vo-kH1" secondAttribute="top" id="9LZ-Ip-jIz"/>
+                            <constraint firstItem="YSk-Vo-kH1" firstAttribute="bottom" secondItem="y4d-cC-vi2" secondAttribute="bottom" id="Mo9-OT-mAJ"/>
+                            <constraint firstItem="YSk-Vo-kH1" firstAttribute="trailing" secondItem="y4d-cC-vi2" secondAttribute="trailing" id="Pyo-oL-k0c"/>
+                            <constraint firstItem="m5f-lG-sFK" firstAttribute="centerX" secondItem="y4d-cC-vi2" secondAttribute="centerX" id="Qy2-tt-KTt"/>
+                            <constraint firstItem="y4d-cC-vi2" firstAttribute="leading" secondItem="YSk-Vo-kH1" secondAttribute="leading" id="pYW-Kc-KjH"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="FuA-9Z-DSF"/>
+                    <connections>
+                        <outlet property="chipmunkButton" destination="YtV-1o-K2j" id="zHv-QR-ZNm"/>
+                        <outlet property="echoButton" destination="LUN-ha-xYn" id="5cX-UX-Zjn"/>
+                        <outlet property="rabbitButton" destination="FNi-EI-yiI" id="5N7-ex-j8o"/>
+                        <outlet property="reverbButton" destination="uQy-KT-PuO" id="amS-VN-dzM"/>
+                        <outlet property="snailButton" destination="B66-It-ucV" id="YbZ-F1-0jz"/>
+                        <outlet property="stopButton" destination="m5f-lG-sFK" id="zvL-zl-L5F"/>
+                        <outlet property="vaderButton" destination="Jqc-NT-0rO" id="Uhf-io-ini"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Uai-Mc-0nm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -108,11 +207,14 @@
         </scene>
     </scenes>
     <resources>
+        <image name="Echo" width="90" height="90"/>
+        <image name="Fast" width="90" height="90"/>
+        <image name="HighPitch" width="90" height="90"/>
+        <image name="LowPitch" width="90" height="90"/>
         <image name="RecordButton" width="155" height="155"/>
+        <image name="Reverb" width="90" height="90"/>
+        <image name="Slow" width="90" height="90"/>
         <image name="Stop" width="155" height="155"/>
-        <systemColor name="linkColor">
-            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
